@@ -5,6 +5,9 @@ Version 1.3 (2010-XX-XX)
 
 * quickdf now adds names if missing
 
+* summarise preserves variable names if explicit names not provided (Fixes
+  #17)
+
 * arrays with names should be sorted correctly once again (also fixed a bug in
   the test case that prevented me from catching this automatically)
 
